# ponderadas-m9-inteli

./: .gitignore  LICENSE  README.md
ponderada_1/: README.md  mqtt_solar_publisher.py  requirements.txt
ponderada_2/: README.md
ponderada_2/pyTdd/: setup.cfg
ponderada_2/pyTdd/pyTdd/simulador/: solarpublisher.py  solarsubscriber.py
ponderada_2/pyTdd/tests/: test_simulator.py
ponderada_3/: README.md
ponderada_4/: README.md
ponderada_4/pyTdd/: setup.cfg
ponderada_4/pyTdd/pyTdd/simulador/: solarpublisher.py  solarsubscriber.py
ponderada_4/pyTdd/tests/: test_simulator.py  test_simulator_b.py
ponderada_5/: README.md  gerador_1bl.py  solucao_1bl.py
ponderada_hmq_fafka/: solar_publisher.py
