[metadata]
name = pyTdd
version = 1.0
author = Luiz Fernando da Silva Borges
author_email = luiz.borges@sou.inteli.edu.br
description = Teste TDD
long_description = file: README.md
long_description_content_type = text/markdown
url = https://inteli.edu
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    requests
    importlib-metadata
    pydantic
    exceptiongroup==1.2.0
    iniconfig==2.0.0
    packaging==23.2
    paho-mqtt==2.0.0
    pluggy==1.4.0
    pytest==8.0.1
    tomli==2.0.1

[options.packages.find]
exclude = 
    tests

[options.extras_require]
test =
    pytest
    pytest-cov
    mypy
    flake8
    tox